--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autocannon": "^7.5.0",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "dotenv": "^10.0.0",
